--- a/genreXpose/config.cfg
+++ b/genreXpose/config.cfg
@@ -3,10 +3,10 @@
 ###################################################
 
 # Directory where the music dataset is located (GTZAN dataset)
-GENRE_DIR = "~/Desktop/genre-project/genres_dataset"
+GENRE_DIR = "/content/drive/My Drive/GenreXpose/genres"
 
 # Directory where the test music is located
-TEST_DIR = "~/Desktop/genre-project/genres_test_set"
+TEST_DIR = "/content/drive/My Drive/GenreXpose/genres_test_set"
 
 # All the available genres
 GENRE_LIST = [ "blues","classical","country","disco","hiphop","jazz","metal","pop","reggae","rock"]
