--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.8.0
-pydub==0.9.0
-scikit-learn==0.14.1
-statsmodels==0.3.1
-scikits.talkbox==0.2.5
-scipy==0.13.1
+numpy
+pydub
+scikit-learn
+statsmodels
+scikits.talkbox
+scipy
